--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-router": "^7.2.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "sonner": "^2.0.1",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
