user schema create done

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 
 db_url = mongodb+srv://myshopecommerce:myshopecommerce@crud.4akof.mongodb.net/myshopecommerce?retryWrites=true&w=majority&appName=crud
+base_url = /api/v1
+PORT = 4400
