--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@
 db_url = mongodb+srv://myshopecommerce:myshopecommerce@crud.4akof.mongodb.net/myshopecommerce?retryWrites=true&w=majority&appName=crud
 base_url = /api/v1
 PORT = 4400
+sendmail_gmail = withgaming50@gmail.com
+sendmailapp_pass = evac xzcg vwcm toll
