login part done

--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,4 @@ base_url = /api/v1
 PORT = 4400
 sendmail_gmail = withgaming50@gmail.com
 sendmailapp_pass = evac xzcg vwcm toll
+JWT_SECRET = shhhhh
