product all part backend done

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "Index.js",
   "scripts": {
     "start": "nodemon Index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+   "seed":"node Seeder.js"
   },
   "keywords": [],
   "author": "",
