setup ssl payment system

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@ PORT = 4400
 sendmail_gmail = withgaming50@gmail.com
 sendmailapp_pass = evac xzcg vwcm toll
 JWT_SECRET = 'shhhhh'
+STORE_ID = laraz67b794826e5c6
+STORE_PASS = laraz67b794826e5c6@ssl
