--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,6 @@ sendmailapp_pass = evac xzcg vwcm toll
 JWT_SECRET = 'shhhhh'
 store_id = laraz67b794826e5c6
 store_password =laraz67b794826e5c6@ssl
+Cloud_name = dbwvm25a6
+Cloud_api_key= 484311324149311
+Cloud_api_secret = tSbgRIE649-oMwZfF-b_-VFY9HM
